<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white">

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edit_text_bg_border"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:hint="@string/enter_old_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edit_text_bg_border"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="@id/oldPassword"
        app:layout_constraintStart_toStartOf="@id/oldPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView39"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/confirmNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg_border"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/confirmed_new_password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="@id/newPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/newPassword"
        app:layout_constraintTop_toBottomOf="@id/textView53"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_60sdp"
        android:layout_marginEnd="@dimen/_60sdp"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13sdp"
        android:onClick="onClick"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/confirmNewPassword"
        app:layout_constraintStart_toStartOf="@id/confirmNewPassword"
        app:layout_constraintTop_toBottomOf="@id/confirmNewPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:layout_marginTop="@dimen/_60sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="@id/oldPassword"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="@id/oldPassword"
        app:layout_constraintTop_toBottomOf="@id/oldPassword" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmed_new_password"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="@id/newPassword"
        app:layout_constraintTop_toBottomOf="@id/newPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>