<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp">

    <RadioButton
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:text="@string/sample_text1"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:text=""
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox" />

    <TextView
        android:id="@+id/removeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/remove"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        android:paddingStart="@dimen/_7sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingEnd="@dimen/_7sdp"
        android:background="@drawable/black_border"
        app:layout_constraintStart_toStartOf="@id/addressTextView"
        app:layout_constraintTop_toBottomOf="@id/addressTextView" />

    <TextView
        android:id="@+id/editTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_10sdp"
        android:paddingStart="@dimen/_17sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingEnd="@dimen/_17sdp"
        android:background="@drawable/blue_bg"
        app:layout_constraintStart_toEndOf="@id/removeTextView"
        app:layout_constraintTop_toTopOf="@id/removeTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>